Version 0.9.5-beta. Fixed bracket image getting clipped if it scrolled offscreen.

--- a/TeamGosuWebApp/wwwroot/css/style.css
+++ b/TeamGosuWebApp/wwwroot/css/style.css
@@ -800,6 +800,7 @@ ol {
 */
 .bracketChallenge-section {
 	background: #060a2e;
+	overflow: auto;
 }
 
 /*
